inherit default title rotation from parent, tdf#75316

Change-Id: I2cf609a3f2c5eb1f9d7716b3ee89d4131d942ffb